--- a/functions/package.json
+++ b/functions/package.json
@@ -22,11 +22,13 @@
     "firebase-admin": "^9.2.0",
     "firebase-functions": "^3.11.0",
     "inversify": "^5.0.5",
+    "jest": "^26.6.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.6.3",
     "shallow-equal-object": "^1.1.1"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.20",
     "@typescript-eslint/eslint-plugin": "^3.9.1",
     "@typescript-eslint/parser": "^3.8.0",
     "firebase-functions-test": "^0.2.0",
